<resources>
    <string name="app_name">ShoppingListHomeWork</string>
    <string name="bought">bought</string>
    <string name="name">Item name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="chartDescription">Price of bought goods by category</string>
    <string name="chartLabelDescription">Types of goods</string>
    <string name="filter">Filter</string>
    <string name="item_name">Name</string>
    <string name="exact_match">Exact Match</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="max_price">max price: </string>
    <string name="min_price">min price: </string>
</resources>
