<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:id="@+id/root"
    >
    
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/cbNameFull"
        android:text="@string/exact_match"/>
    
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbMinPrice"
        android:max="10000000"

        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbMaxPrice"
        android:max="10000000"
        />

    <CheckBox
        android:id="@+id/filterByCategory"
        android:text="@string/filter_by_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCategory"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnOk"
        android:text="@string/ok"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:text="@string/cancel"/>


</LinearLayout>